adding endpoint post /reservation/calculation
